test/types/records/split-init/split-init-out-formal-never-set.good
split-init-out-formal-never-set.chpl:1: In function 'genericOut':
split-init-out-formal-never-set.chpl:1: error: 'arg' is not initialized and has no type
note: the type for a generic out intent argument is inferred from the function body
